<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Clapp!</string>
    <string name="app_headline">CLAPP!</string>
    <string name="follower_number_label">Followers: </string>
    <string name="event_number_label">Events: </string>
    <string name="member_number_label">Members: </string>
    <string name="upcoming_events_number_label">Upcoming Events: </string>
    <string name="total_events_number_label">"Total Events: "</string>

    <string name="login">LOGIN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="continue_as_a_guest">CONTINUE AS A GUEST</string>

    <string name="user_greeting">Hello </string>

    <string name="account_created">Account Created Successfully!</string>

    <string name="name_hint">Name</string>
    <string name="surname_hint">Surname</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="gender_prompt">Select gender</string>

    <string name="main_feed">Main Feed</string>
    <string name="personal_feed">Personal Feed</string>
    <string name="club_search">Club Search</string>
    <string name="calendar">Calendar</string>
    <string name="user_profile">User Profile</string>

    <string name="create_event_step_one_label">Set Event Details</string>
    <string name="create_event_step_two_label">Set Event Contacts</string>
    <string name="create_event_step_three_label">Preview Image</string>
    <string name="event_title">Title</string>
    <string name="event_description">Description</string>
    <string name="event_place">Place</string>
    <string name="event_type_prompt">Choose event type</string>
    <string name="conference">Conference</string>
    <string name="meeting">Meeting</string>
    <string name="competition">Competition</string>
    <string name="party">Party</string>
    <string name="workshop">Workshop</string>
    <string name="trip">Trip</string>
    <string name="nightout">Night out</string>
    <string name="training">Training</string>

    <string name="next">Next</string>
    <string name="add_contacts_prompt">Add event coordinators here!</string>
    <string name="contacts_label">Contacts</string>
    <string name="no_contacts">No contacts!</string>
    <string name="privacy_prompt">Select privacy</string>
    <string name="global_privacy">Global</string>
    <string name="local_privacy">Local</string>
    <string name="club_privacy">Club</string>
    <string name="group_privacy">Group</string>
    <string name="custom_privacy">Private</string>
    <string name="generate_chat">Generate chat group</string>

    <string name="add_image_label">Add Image</string>
    <string name="select_image_prompt">Select Image</string>

    <string name="no_name_error">Please enter your name!</string>
    <string name="no_email_error">Please enter your email!</string>
    <string name="no_surname_error">Please enter your surname!</string>
    <string name="no_password_error">Please enter your password!</string>
    <string name="email_not_valid_error">Email is not valid!</string>
    <string name="name_too_short_error">Name must be at least 2 characters!</string>
    <string name="surname_too_short_error">Surname must be at least 2 characters!</string>
    <string name="password_too_short_error">Password must contain at least 8 characters!</string>
    <string name="password_too_weak_error">Password must contain at least two of: letter, number, special character!</string>
    <string name="no_date_of_birth_error">Please pick your date of birth!</string>
    <string name="password_no_letters">Password must contain letters!</string>
    <string name="younger_than_13">You must be older than 13 years to join our community!</string>
    <string name="password_doesnt_match">Passwords must match!</string>

    <string name="user_exists_error">Email is already in use! <a>Forgot your password?</a></string>

    <string name="date_format">DD/MM/YYYY</string>

    <string name="action_filter">Filter</string>
    <string name="action_create">Create Event</string>
    <string name="no_events">No events!</string>
    <string name="no_clubs">No clubs!</string>

</resources>