<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/club_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_horizontal_margin"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/calendar_view"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintEnd_toEndOf="parent">


            <ImageView
                android:id="@+id/club_image"
                android:layout_width="wrap_content"
                android:layout_height="125dp"
                android:src="@mipmap/ic_launcher"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/club_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Some Club"
                android:textSize="@dimen/default_sub_head_size"
                android:textStyle="bold"
                android:layout_toRightOf="@id/club_image"
                android:layout_toEndOf="@id/club_image"
                android:layout_marginLeft="@dimen/default_horizontal_margin"
                android:layout_marginStart="@dimen/default_horizontal_margin" />

            <TextView
                android:id="@+id/club_follower_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/follower_number_label"
                android:layout_alignLeft="@id/club_name"
                android:layout_alignStart="@id/club_name"
                android:layout_below="@id/club_name" />

            <TextView
                android:id="@+id/club_member_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/member_number_label"
                android:layout_alignLeft="@id/club_name"
                android:layout_alignStart="@id/club_name"
                android:layout_below="@id/club_follower_number" />

            <TextView
                android:id="@+id/total_events_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_events_number_label"
                android:layout_alignBottom="@id/club_image"
                android:layout_alignLeft="@id/club_name"
                android:layout_alignStart="@id/club_name" />

            <TextView
                android:id="@+id/future_events_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upcoming_events_number_label"
                android:layout_above="@id/total_events_number"
                android:layout_alignLeft="@id/club_name"
                android:layout_alignStart="@id/club_name" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/plus_box_outline"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/format_list_bulleted"
                android:layout_alignBottom="@id/total_events_number"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true" />

        </RelativeLayout>

        <CalendarView
            android:id="@+id/calendar_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/club_info"
            app:layout_constraintBottom_toBottomOf="parent">


        </CalendarView>


    </android.support.constraint.ConstraintLayout>

</ScrollView>