<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/default_horizontal_margin"
            android:paddingLeft="@dimen/default_horizontal_margin"
            android:paddingRight="@dimen/default_horizontal_margin"
            android:paddingStart="@dimen/default_horizontal_margin">

            <ImageView
                android:id="@+id/event_image"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:padding="32dp"
                android:src="@drawable/plus_box_outline"
                app:layout_constraintBottom_toTopOf="@+id/event_title_input_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <android.support.design.widget.TextInputLayout
                android:id="@+id/event_title_input_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/event_type_spinner"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/event_image">

                <EditText
                    android:id="@+id/event_title_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/event_title"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>


            <Spinner
                android:id="@+id/event_type_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/event_types"
                android:filterTouchesWhenObscured="false"
                android:prompt="@string/event_type_prompt"
                android:spinnerMode="dialog"
                app:layout_constraintBottom_toTopOf="@+id/event_date_input_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/event_title_input_layout" />


            <android.support.design.widget.TextInputLayout
                android:id="@+id/event_date_input_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingEnd="8dp"
                android:paddingRight="8dp"
                android:paddingStart="8dp"
                app:layout_constraintBottom_toTopOf="@+id/event_place_input_layout"
                app:layout_constraintEnd_toStartOf="@+id/event_time_input_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/event_type_spinner">

                <EditText
                    android:id="@+id/event_date_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/calendar_blank"
                    android:drawableRight="@drawable/calendar_blank"
                    android:inputType="date"
                    android:singleLine="true"
                    tools:hint="@tools:sample/date/ddmmyy" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/event_time_input_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingStart="8dp"
                app:layout_constraintBottom_toBottomOf="@id/event_date_input_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/event_date_input_layout"
                app:layout_constraintTop_toTopOf="@id/event_date_input_layout">

                <EditText
                    android:id="@+id/event_time_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/clock"
                    android:drawableRight="@drawable/clock"
                    android:inputType="time"
                    android:singleLine="true"
                    tools:hint="@tools:sample/date/hhmm" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/event_place_input_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/event_date_input_layout">

                <EditText
                    android:id="@+id/event_place_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/map_marker"
                    android:drawableRight="@drawable/map_marker"
                    android:hint="@string/event_place"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</layout>

